@@ -15,6 +15,8 @@
       switch off (deprecated) regex fallback for component resolution.
     - Added an nginx-specific behavior to the FastCGI engine to allow
       proper PATH_INFO and SCRIPT_NAME processing for non-root applications
+    - Enable Catalyst::Utils::home() to find home within Dist::Zilla built
+      distributions
 
 5.80013 2009-09-17 11:07:04
 
